# ot-harjoitustyo

./: .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/misc/: sekvenssikaaviot.txt
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko3/: tehtavat.md
src/: classtest.py  config.py  index.py  initialize_database.py  settings.py
src/assets/: level_1.csv  level_1_test.csv
src/assets/maps/: level_2.csv  level_3.csv  level_4.csv
src/entities/: floor.py  obstacle.py  player.py  result.py  save.py  sprites.py  user.py
src/repositories/: result_repository.py  save_repository.py  user_repository.py
src/services/: audio_service.py  clock_service.py  event_queue_service.py  event_service.py  game_service.py  information_service.py  level_service.py  render_service.py
src/tests/: classtest_test.py
src/tests/entities/: obstacle_test.py  player_test.py  save_test.py  sprites_test.py
src/tests/repositories/: result_repository_test.py  save_repository_test.py  user_repository_test.py
src/tests/services/: audio_service_test.py  game_service_test.py  information_service_test.py  level_service_test.py
src/ui/: finish_view.py  game_over_view.py  load_game_view.py  login_view.py  menu_view.py  new_game_view.py  renderer.py  setup_view.py  start_view.py  transition_view.py  ui.py
(+5 files in other folders)
